<?xml version="1.0" encoding="utf-8"?>

<!--
    Resource name: values/string.xml
    Abstract: Localization file for English
    Environment: Android
    Copyright (C) 2016 Vesa Eskola.
-->

<resources>


    <!-- Androidmanifest.xml -->
    <string name="app_name">Vehicle Database</string>

    <!-- general localizations -->
    <string name="wellcome_message">Wellcome to the Vehicle database application.\nPlease add Your first vehicle from here.</string>
    <string name="activity_entry_done">Done</string>
    <string name="activity_entry_next">Next</string>
    <string name="activity_entry_pick_date">Pick date</string>
    <string name="activity_entry_pick_image">Pick attachment image</string>
    <string name="activity_entry_date">14-Mar-16</string>
    <string name="activity_entry_snap_image">snap</string>
    <string name="activity_entry_mileage">Mileage</string>
    <string name="activity_entry_expense">Expense</string>
    <string name="activity_entry_amount">Amount</string>
    <string name="activity_entry_description">Description</string>

    <string name="confirmation_dialog_ok">OK</string>
    <string name="confirmation_dialog_cancel">Cancel</string>
    <string name="confirmation_dialog_delete_vehicle_title">Delete Vehicle</string>
    <string name="confirmation_dialog_delete_vehicle">Do you really want to delete this vehicle ?</string>

    <!-- Localization strings -->
    <string name="general_short_date">dd MMM yy</string>
    <string name="general_image_name_date_template">yyMMdd_HHmmss</string>


    <!-- activity_vehicle_list.xml -->
    <string name="title">Vehicles</string>

    <!-- activity_action_list.xml -->
    <string name="title_fueling">Re-fueling</string>
    <string name="title_service">Service</string>
    <string name="title_event">Event</string>
    <string name="title_fuelings">Re-fuelings</string>
    <string name="title_services">Services</string>
    <string name="title_events">Events</string>

    <!-- vehicle_list_item.xml -->
    <string name="open_vehicle">Open</string>

    <!-- activity_vehicle_info.xml -->
    <string name="vehicle_info_menu">Menu</string>
    <string name="vehicle_info_fueling">Refueling</string>
    <string name="vehicle_info_service">Service</string>
    <string name="vehicle_info_event">Event</string>
    <string name="vehicle_info_more">More</string>
    <string name="vehicle_info_recent">Recent:</string>
    <string name="vehicle_info_no_fuelings">No Refuelings</string>
    <string name="vehicle_info_no_services">No Services</string>
    <string name="vehicle_info_no_events">No Events</string>

    <!-- activity_vehicle_entry_basic.xml -->
    <string name="vehicle_entry_basic_new_vehicle">New Vehicle</string>
    <string name="vehicle_entry_basic_edit_vehicle">Edit Vehicle</string>
    <string name="vehicle_entry_basic_plate">Reg Plate</string>
    <string name="vehicle_entry_basic_make">Make</string>
    <string name="vehicle_entry_basic_model">Model</string>
    <string name="vehicle_entry_basic_next">Next</string>

    <!-- activity_vehicle_entry_detail.xml -->
    <string name="vehicle_entry_detail_year">Year</string>
    <string name="vehicle_entry_detail_vincode">VIN code</string>

    <string name="vehicle_entry_detail_fuel_unit">Fuel unit</string>
    <string name="vehicle_entry_detail_odometer_unit">Odom. unit</string>


    <string name="vehicle_entry_detail_liter">Liter</string>
    <string name="vehicle_entry_detail_gallon">Gallon</string>
    <string name="vehicle_entry_detail_mail">Mail</string>
    <string name="vehicle_entry_detail_km">Km</string>

    <string name="vehicle_entry_detail_short_liter">lit.</string>
    <string name="vehicle_entry_detail_short_gallon">ga.</string>
    <string name="vehicle_entry_detail_short_mail">mi.</string>
    <string name="vehicle_entry_detail_short_km">km</string>

    <!-- activity_service_entry.xml -->
    <string name="service_entry_new_service">New Service</string>
    <string name="service_entry_edit_service">Edit Service</string>
    <string name="service_entry_service_type_title">Service Type</string>

    <!-- Default service type list -->
    <string-array name="service_types">
                <item>Not defined</item>
                <item>Engine oil</item>
                <item>Engine oil filter</item>
                <item>Engine air filter</item>
                <item>Engine fuel filter</item>
                <item>Timing belt/chain</item>
                <item>Brake pads/linings</item>
                <item>Brake disks</item>
                <item>Other</item>
            </string-array>

    <!-- activity_fueling_entry.xml -->
    <string name="fueling_entry_new_refueling">New Refueling</string>
    <string name="fueling_entry_edit_refueling">Edit Refueling</string>

    <!-- activity_event_entry.xml -->
    <string name="event_entry_new_event">New Event</string>
    <string name="event_entry_edit_event">Edit Event</string>

    <!-- Default event type list -->
    <string-array name="event_types">
                <item>Not defined</item>
                <item>Mileage</item>
                <item>Accessory</item>
                <item>Trip</item>
                <item>Memo</item>
                <item>Other</item>
            </string-array>


    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_content">This Privacy Policy describes our policies on the collection, use and disclosure of your information, and describes the choices available to you regarding the use of, your access to, and how to update or delete your personal information. We are committed to good privacy practices regarding personal data entered by you. &#x0a;&#x0a;General Information: Vehicle database application maintain all information entered by user about your vehicles. It will keep track of services, mileages, trips, costs and events.&#x0a;&#x0a;The information we gather: Vehicle database application gather information you give us through forms, any other information will not be collected.&#x0a;&#x0a;How we use the information we gather: Vehicle database application merely operates on the device internal database. No information is ever sent outside your device.&#x0a;&#x0a;Security: The security of your personal data is important to us. When you enter any information on Vehicle database application forms it is stored to user profile related local folder of the application. Other computer user will not see data gathered. When ever user uninstall the vehicle database application, also the data gathered will be deleted automatically."</string>

</resources>
