<?xml version="1.0" encoding="utf-8"?>

<!--
    Layout name: activity_fueling_entry.xml
    Abstract: Layout for the FuelingEntryActivity class.
    Environment: Android
    Copyright (C) 2016 Vesa Eskola.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fueling_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="fi.vesaeskola.vehicledatabase.FuelingEntryActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/fueling_entry_new_refueling"
        android:textSize="22sp" />

    <Button
        android:text="@string/activity_entry_pick_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_pick_date"
        android:onClick="showDatePickerDialog" />


    <EditText
        android:id="@+id/mileage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_entry_mileage" />


    <EditText
        android:id="@+id/fueling_amount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/activity_entry_amount" />

    <EditText
        android:id="@+id/expense"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_entry_expense" />

    <EditText
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/activity_entry_description" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="OnFuelingEntered"
            android:layout_alignParentRight="true"
            android:text="@string/activity_entry_done"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

</LinearLayout>
