<?xml version="1.0" encoding="utf-8"?>

<!--
    Layout name: activity_service_entry.xml
    Abstract: Layout for the ServiceEntryActivity class.
    Environment: Android
    Copyright (C) 2016 Vesa Eskola.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fueling_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="fi.vesaeskola.vehicledatabase.FuelingEntryActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/service_entry_new_service"
        android:textSize="22sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_pick_date"
        android:onClick="showDatePickerDialog"
        android:text="@string/activity_entry_pick_date" />

    <EditText
        android:id="@+id/mileage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_entry_mileage" />

    <EditText
        android:id="@+id/expense"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_entry_expense" />

    <EditText
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/activity_entry_description" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_pick_image"
        android:onClick="pickImageWithCamera"
        android:text="@string/activity_entry_pick_image" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/actionImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/your_vehicle"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/btnDone" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="OnServiceEntered"
            android:layout_alignParentRight="true"
            android:text="@string/activity_entry_done"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_alignParentBottom="true" />


    </RelativeLayout>

</LinearLayout>
